# dart-ffi-crash

./: LICENSE  README.md  generated-ffigen-config.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/profile/: AndroidManifest.xml
app/: CMakeLists.txt  crash.cc  crash.h  ffi_api.h  macros.h
cpp/: crash.cc  crash.h  ffi_api.cc  ffi_api.h  macros.h  scene.cc  scene.h
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_ffi.dart  generated_bindings.dart  main.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
plugins/make_crash/: .metadata  README.md  pubspec.yaml
plugins/make_crash/lib/: make_crash.dart  make_crash_method_channel.dart  make_crash_platform_interface.dart
plugins/make_crash/windows/: CMakeLists.txt  make_crash_plugin.cpp  make_crash_plugin.h  make_crash_plugin_c_api.cpp
plugins/test_crash/: README.md  pubspec.yaml
plugins/test_crash/lib/: test_crash.dart  test_crash_method_channel.dart  test_crash_platform_interface.dart
plugins/test_crash/windows/: CMakeLists.txt  test_crash_plugin.cpp  test_crash_plugin.h  test_crash_plugin_c_api.cpp
test/: widget_test.dart
windows/: CMakeLists.txt
windows/app/: CMakeLists.txt
windows/cpp/: CMakeLists.txt
windows/dependencies/SentryNative/debug/: sentry.exp
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+5 files in other folders)
