cmake_minimum_required(VERSION 3.4)

# 项目名称
set(PROJECT_NAME app)
project(${PROJECT_NAME} LANGUAGES CXX)

# 源文件
file(GLOB_RECURSE SRC_DIR_LIST "../../app/*.cc" "../../app/*.h")

add_library(${PROJECT_NAME} SHARED ${SRC_DIR_LIST})

install(FILES ${PROJECT_BINARY_DIR}/Debug/${PROJECT_NAME}.dll CONFIGURATIONS Debug DESTINATION "$<TARGET_FILE_DIR:${BINARY_NAME}>" COMPONENT Runtime)
install(FILES ${PROJECT_BINARY_DIR}/Debug/${PROJECT_NAME}.pdb CONFIGURATIONS Debug DESTINATION "$<TARGET_FILE_DIR:${BINARY_NAME}>" COMPONENT Runtime)
install(FILES ${PROJECT_BINARY_DIR}/Release/${PROJECT_NAME}.dll CONFIGURATIONS Release DESTINATION "$<TARGET_FILE_DIR:${BINARY_NAME}>" COMPONENT Runtime)

