cmake_minimum_required(VERSION 3.4)

# 项目名称
set(PROJECT_NAME app)
project(${PROJECT_NAME} LANGUAGES CXX)

# 源文件
file(GLOB_RECURSE SRC_DIR_LIST "../../cpp/*.cc" "../../cpp/*.h")

add_library(${PROJECT_NAME} SHARED ${SRC_DIR_LIST})

install(FILES ${PROJECT_BINARY_DIR}/Debug/app.dll CONFIGURATIONS Debug DESTINATION "$<TARGET_FILE_DIR:${BINARY_NAME}>" COMPONENT Runtime)
install(FILES ${PROJECT_BINARY_DIR}/Debug/app.pdb CONFIGURATIONS Debug DESTINATION "$<TARGET_FILE_DIR:${BINARY_NAME}>" COMPONENT Runtime)
install(FILES ${CPPREST_DLL_FILE_PATH}/Release/app.dll CONFIGURATIONS Release DESTINATION "$<TARGET_FILE_DIR:${BINARY_NAME}>" COMPONENT Runtime)

